app/assets/stylesheets/sidebar.scss
.Sidebar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;

  width: 5%;
  height: 100%;
  padding-top: 14%;
  padding-left: 1.2%;
  overflow-x: hidden;

  background-color: #1b60f3;

  white-space: nowrap;

  transition: width 0.5s;
}

.Sidebar a {
  display: block;
  padding-left: 8%;

  color: #1f29a4;

  font-size: 1em;
  text-decoration: none;
}

.Sidebar-book {
  margin: 0 1.3em 0.1em 0;

  vertical-align: middle;
}

.Sidebar-list {
  margin: 0 1.3em 0.1em 0.2em;

  vertical-align: middle;
}

.Sidebar-session {
  margin: 0 1.3em 0.1em 0.3em;

  vertical-align: middle;
}

.Sidebar-textList {
  padding-top: 3.5em;
  padding-bottom: 3.5em;
}

@media screen and (max-height: 450px) {
  .Sidebar {
    padding-top: 15px;
  }
  .Sidebar a {
    font-size: 18px;
  }
}

